--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="vwkAX67VZ1C87Pl_aNx1AWn96Xpzk5JYhaAMp2314ZQ" />
+  <link rel="canonical" href="https://laiba190.github.io/digital-media-impact/">
 <title>Understanding Anime Slayer: How Streaming Platforms Shape Anime Accessibility</title>
-<meta name="description" content="Explore how Anime Slayer and similar streaming platforms are transforming anime accessibility, global learning, and cultural exchange in an educational context.">
+<meta name="description" content="Explore how Anime Slayer and similar streaming platforms are transforming anime accessibility, global learning, and cultural exchange.">
 <meta name="keywords" content="Anime Slayer, anime education, anime accessibility, streaming platforms, cultural learning, anime globalization">
 <meta name="robots" content="index, follow">
 <style>
@@ -187,3 +189,4 @@
   </footer>
 </body>
 </html>
+
